Fix avatar alignment

--- a/www/static/css/style.css
+++ b/www/static/css/style.css
@@ -60,12 +60,20 @@ body {
   background-color: #fff; }
 
 .avatar-img {
-  width: 50px;
-  height: 50px;
+  width: auto;
+  height: auto;
+  max-width: 75px;
+  max-height: 75px;
   background-size: cover;
   background-position: center;
   border-radius: 50%;
-  margin-right: 15px;
+  margin-right: -20%;
+}
+
+.avatar-content {
+  padding-right: 10px;
+  width: 75px;
+  height: 75px;
 }
 
 .search-box {
